--- a/wp-content/themes/pawar2018/sass/modules/_footer.scss
+++ b/wp-content/themes/pawar2018/sass/modules/_footer.scss
@@ -4,7 +4,7 @@
   bottom: 0;
   padding: 2rem 0;
   @include breakpoint(large) {
-    padding: 3.25rem 0;
+    padding: 6.25rem 0;
   }
   .button {
     max-width: 40%;
@@ -32,7 +32,6 @@
 }
 
 .footer-nav {
-  margin-bottom: 2rem;
   font-size: .9375rem;
 }
 
